Refactor. No jQuery, less variables; scope; etc.

--- a/index.html
+++ b/index.html
@@ -1,13 +1,12 @@
 <!doctype html>
 <html lang="en">
-<head>
-	<meta charset="UTF-8">
-	<script src="http://code.jquery.com/jquery.min.js"></script>
-	<script src="app.js"></script>
-</head>
-<body id="fizzbuzz">
+  <head>
+    <meta charset="UTF-8">
+  </head>
+  <body>
+    <div id="fizzbuzz"></div>
 
-
-	
-</body>
+    <!-- <script src="http://code.jquery.com/jquery.min.js" defer></script> -->
+    <script src="app.js" defer></script>
+  </body>
 </html>
